# llaisys

./: .gitignore  wget-log  wget-log.1  wget-log.2  wget-log.3  xmake.lua
.github/workflows/: build.yaml
include/llaisys/: ops.h  tensor.h
include/llaisys/models/: qwen2.h
python/: README.md  setup.cfg
python/llaisys/: __init__.py  ops.py  tensor.py
python/llaisys/backend/: __init__.py  inference_backend.py
python/llaisys/libllaisys/: __init__.py  models.py  ops.py  tensor.py
python/llaisys/models/: __init__.py  kvcachepool.py  qwen2.py
python/llaisyscore/: setup.cfg
python/server/: README.md  __init__.py  app.py  config.py  engine.py  schemas.py
python/server-project/: setup.cfg
python/server/ui/: index.html
report/: report.md  report_chatbot.md  report_cuda.md
src/: utils.hpp
src/device/nvidia/: nvidia_runtime_api.cu
src/llaisys/: ops.cc  qwen2.cc  tensor.cc
src/models/: model_qwen2.cpp  model_qwen2.hpp
src/ops/add/: op.cpp
src/ops/add/cuda/: add_cuda.cu  add_cuda.cuh
src/ops/argmax/: op.cpp
src/ops/argmax/cpu/: argmax_cpu.cpp  argmax_cpu.hpp
src/ops/embedding/: op.cpp
src/ops/linear/: op.cpp
src/ops/random_sample/: op.cpp  op.hpp
src/ops/rms_norm/: op.cpp
src/ops/rope/: op.cpp
src/ops/self_attention/: op.cpp
src/ops/swiglu/: op.cpp
src/tensor/: tensor.cpp
src/utils/: cuda_type_utils.cuh
test/: test_infer.py  test_inference_backend.py  test_kvcachepool.py  test_server.py  test_server_config.py  test_tensor.py  test_tensor_dual_device.py
test/ops/: random_sample.py
xmake/: nvidia.lua
(+30 files in other folders)
