[metadata]
name = llaisys-server
version = 0.1.0
description = Chat server project for LLAISYS
author = Pan Zezhong
license = MIT

[options]
packages = find:
package_dir =
    = ..
include_package_data = True
zip_safe = False
install_requires =
    llaisys>=0.1.0
    fastapi
    uvicorn

[options.packages.find]
where = ..
include =
    server*
